Introduced effective simple 2D grid for people & fixed 502 in debug mode
